合并老的commit git总是能给我不一样的惊喜，还好我备份了(两次啊两次)